@@ -28,3 +28,5 @@ sapply(uiFiles, function(from) {
     file.copy(from = file.path(uiDir, from), to = to, overwrite = TRUE)
 })  
 
+enableBookmarking(store = "url")
+
